# codex-agent-sdk-python

./: .gitignore  README.md  pyproject.toml
docs/: CONTRIBUTING.md  README.md  RELEASE.md
examples/: decorators_example.py  quick_start.py  quick_start_sugar.py  real_world_project_analysis.py  typed_events_example.py
src/codex_agent_sdk/: __init__.py  agent.py  cli.py  client.py  errors.py  models.py  query.py  schema.py  schema_tools.py  types.py
src/codex_agent_sdk/transport/: __init__.py  subprocess.py
tests/: test_agent_sugar.py  test_integration_app_server.py  test_rpc.py
