[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-agent-sdk"
version = "0.0.1"
description = "Python SDK for Codex app-server"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OpenAI", email = "support@openai.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
keywords = ["codex", "sdk", "openai", "agent"]
dependencies = [
    "anyio>=4.0.0",
    "typing_extensions>=4.0.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "anyio[trio]>=4.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
schema = [
    "jsonschema>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/openai/codex"
Documentation = "https://developers.openai.com/codex"
Issues = "https://github.com/openai/codex/issues"

[project.scripts]
codex-agent-sdk = "codex_agent_sdk.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_agent_sdk"]
only-include = ["src/codex_agent_sdk"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/docs",
    "/examples",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--import-mode=importlib",
    "-p", "asyncio",
]
markers = [
    "integration: marks integration tests that require codex CLI",
]

[tool.pytest-asyncio]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = [
    ".orig_openaicodex",
    ".venv",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "PTH",
    "SIM",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["codex_agent_sdk"]
